--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">DolarNow</string>
+    <string name="app_name">Dolar Argentina</string>
     <string name="try_again">Reconnect</string>
 </resources>
